# agenttrace

./: .env.example  .gitignore  AGENTS.md  pyproject.toml
docs/: troubleshooting_learnings.md
docs/superpowers/plans/: 2026-06-17-summary-contract-alignment.md
src/agenttrace/: config.py
src/agenttrace/agents/analysis/: cli.py  github_provider.py  graph.py  input_providers.py  react_tools.py  state.py
src/agenttrace/agents/analysis/nodes/: analysis_precheck.py  build_repo_map.py  collect_inputs.py  content_indexer.py  content_preprocessor.py  critical_error_handler.py  evidence_evaluator.py  evidence_scout.py  finalize_analysis.py  finalize_task.py  harness_analyzer.py  persist_analysis.py  quality_gate.py  repository_synthesizer.py  request_builder.py  result_repair.py  risk_and_followup.py  select_next_task.py  targeted_evidence_repair.py  task_result_merge.py
src/agenttrace/agents/analysis/schemas/: content.py  input.py  result.py  trace.py
src/agenttrace/agents/summary/: __init__.py  cli.py  prompt.md  schemas.py  service.py
src/agenttrace/api/: analysis.py
src/agenttrace/app/: errors.py  main.py
src/agenttrace/app/routers/: summaries.py
src/agenttrace/services/: repo_ingest.py
src/agenttrace/shared/: errors.py
tests/: test_analysis_v2_nodes.py  test_analysis_v2_schemas.py  test_harness_analysis.py  test_react_tools.py  test_repo_ingest.py  test_state_diet.py  test_summary_api.py  test_summary_cli.py  test_summary_service.py
